objects/ptt_cm_Order__c.object
<CustomObject>
    <fields>
        <fullName>ptt_Activation_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Activation Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ptt_Activation_Counter__c</fullName>
        <label>Activation Counter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Active_CustomPackages__c</fullName>
        <label>Active Packages</label>
        <summaryFilterItems>
            <field>CM_Selected_Package__c.ptt_IsActive__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>CM_Selected_Package__c.ptt_CM_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ptt_CD_Serial_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CD Serial Number</label>
        <referenceTo>CM_CD_Serial_Number__c</referenceTo>
        <relationshipLabel>CM Orders</relationshipLabel>
        <relationshipName>CM_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to End user</description>
        <label>End User</label>
        <referenceTo>ptt_cm_End_User__c</referenceTo>
        <relationshipLabel>CM Orders</relationshipLabel>
        <relationshipName>CM_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Order_numbers__c</fullName>
        <label>Order numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_ProductID__c</fullName>
        <label>ProductID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Sales_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Channel</label>
        <referenceTo>ptt_cm_Sales_Channel__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calimaster</fullName>
                </value>
                <value>
                    <fullName>VIBGUARD Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Variant__c</fullName>
        <label>Variant</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ptt_System__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PT - CM Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>